test/langtools/tools/javac/datum/Neg02.out
Neg02.java:8:23: compiler.err.expected: token.identifier
1 error
